force-app/main/default/objects/Marketing_Event__c/Marketing_Event__c.object-meta.xml
<CustomObject>
    <label>Marketing Activities</label>
    <nameField>
        <displayFormat>MA-{0000000}</displayFormat>
        <label>MA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>