force-app/main/default/objects/Marketing_Event__c/fields/Assigned_Marketing_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Marketing_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Marketing Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities2</relationshipName>
    <type>Lookup</type>
</CustomField>