force-app/main/default/objects/Marketing_Event__c/fields/Audience_Size__c.field-meta.xml
<CustomField>
    <fullName>Audience_Size__c</fullName>
    <label>Audience Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>