force-app/main/default/objects/Marketing_Event__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>