force-app/main/default/objects/Marketing_Event__c/fields/Bag_Insert__c.field-meta.xml
<CustomField>
    <fullName>Bag_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bag Insert?</label>
    <type>Checkbox</type>
</CustomField>