force-app/main/default/objects/Marketing_Event__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To show which banker is used per marketing activity; If needed.</description>
    <label>Banker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Activities (Banker)</relationshipLabel>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>