force-app/main/default/objects/Marketing_Event__c/fields/Banker_Cards__c.field-meta.xml
<CustomField>
    <fullName>Banker_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banker Cards</label>
    <type>Checkbox</type>
</CustomField>