force-app/main/default/objects/Marketing_Event__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>