force-app/main/default/objects/Marketing_Event__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>