force-app/main/default/objects/Marketing_Event__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MI</fullName>
                <label>HLBP</label>
            </value>
            <value>
                <fullName>MassMutual</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Relo</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>State Farm</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>