force-app/main/default/objects/Marketing_Event__c/fields/Closing_Costs_Flyer__c.field-meta.xml
<CustomField>
    <fullName>Closing_Costs_Flyer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you need to request 1% off closing costs flyers for an event</inlineHelpText>
    <label>Closing Costs Flyer</label>
    <type>Checkbox</type>
</CustomField>