force-app/main/default/objects/Marketing_Event__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Marketing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>