force-app/main/default/objects/Marketing_Event__c/fields/Contracted_or_One_Off__c.field-meta.xml
<CustomField>
    <fullName>Contracted_or_One_Off__c</fullName>
    <label>Contracted or One-Off?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>One-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>