force-app/main/default/objects/Marketing_Event__c/fields/Cost_Details__c.field-meta.xml
<CustomField>
    <fullName>Cost_Details__c</fullName>
    <inlineHelpText>This field is to give a quick description or breakdown of what is included in the cost amount provided above</inlineHelpText>
    <label>Cost Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>