force-app/main/default/objects/Marketing_Event__c/fields/Current_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Current_Promotion__c</fullName>
    <label>Current Promotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>