force-app/main/default/objects/Marketing_Event__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Date departing for event</description>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>