force-app/main/default/objects/Marketing_Event__c/fields/Do_You_Need_New_Creative_Assets__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Need_New_Creative_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Creative Assets Needed?</label>
    <type>Checkbox</type>
</CustomField>