force-app/main/default/objects/Marketing_Event__c/fields/Event_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Event_Address_City__c</fullName>
    <label>Event Address: City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>