force-app/main/default/objects/Marketing_Event__c/fields/Event_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Address_Zip_Code__c</fullName>
    <label>Event Address: Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>