force-app/main/default/objects/Marketing_Event__c/fields/Event_City__c.field-meta.xml
<CustomField>
    <fullName>Event_City__c</fullName>
    <label>Event: City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>