force-app/main/default/objects/Marketing_Event__c/fields/Event_Cost__c.field-meta.xml
<CustomField>
    <fullName>Event_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>