force-app/main/default/objects/Marketing_Event__c/fields/Event_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Event_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Marketing_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>