force-app/main/default/objects/Marketing_Event__c/fields/Event_Street__c.field-meta.xml
<CustomField>
    <fullName>Event_Street__c</fullName>
    <label>Event: Street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>