force-app/main/default/objects/Marketing_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Round Table</fullName>
            </value>
            <value>
                <fullName>Focus Group</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Regional Event</fullName>
            </value>
            <value>
                <fullName>Benefit Partner Fair</fullName>
            </value>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>TML</fullName>
            </value>
            <value>
                <fullName>TMR</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>