force-app/main/default/objects/Marketing_Event__c/fields/Event_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Zip_Code__c</fullName>
    <label>Event: Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>