force-app/main/default/objects/Marketing_Event__c/fields/Exhibit_Size__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Size__c</fullName>
    <label>Exhibit Size</label>
    <type>TextArea</type>
</CustomField>