force-app/main/default/objects/Marketing_Event__c/fields/Exhibiting__c.field-meta.xml
<CustomField>
    <fullName>Exhibiting__c</fullName>
    <label>Exhibiting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>