force-app/main/default/objects/Marketing_Event__c/fields/Expected_of_Event_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_of_Event_Attendees__c</fullName>
    <label>Expected # of Event Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>