force-app/main/default/objects/Marketing_Event__c/fields/FOC_Location__c.field-meta.xml
<CustomField>
    <fullName>FOC_Location__c</fullName>
    <label>FOC Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>