force-app/main/default/objects/Marketing_Event__c/fields/Goal_for_Attending_Event__c.field-meta.xml
<CustomField>
    <fullName>Goal_for_Attending_Event__c</fullName>
    <label>Goal for Attending Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>