force-app/main/default/objects/Marketing_Event__c/fields/Hashtags__c.field-meta.xml
<CustomField>
    <fullName>Hashtags__c</fullName>
    <label>Hashtags</label>
    <length>225</length>
    <type>Text</type>
</CustomField>