force-app/main/default/objects/Marketing_Event__c/fields/Have_We_Attended_this_Event_in_the_Past__c.field-meta.xml
<CustomField>
    <fullName>Have_We_Attended_this_Event_in_the_Past__c</fullName>
    <label>Have We Attended this Event in the Past?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>