force-app/main/default/objects/Marketing_Event__c/fields/Host_Link__c.field-meta.xml
<CustomField>
    <fullName>Host_Link__c</fullName>
    <label>Host Link</label>
    <type>Url</type>
</CustomField>