force-app/main/default/objects/Marketing_Event__c/fields/How_are_we_sending_supplies__c.field-meta.xml
<CustomField>
    <fullName>How_are_we_sending_supplies__c</fullName>
    <label>How are we sending supplies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Attendee Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>