force-app/main/default/objects/Marketing_Event__c/fields/How_many_attended__c.field-meta.xml
<CustomField>
    <fullName>How_many_attended__c</fullName>
    <label>How many attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>