force-app/main/default/objects/Marketing_Event__c/fields/If_Other_Explain__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Explain__c</fullName>
    <label>If Other, Explain</label>
    <type>TextArea</type>
</CustomField>