force-app/main/default/objects/Marketing_Event__c/fields/ISM_Books__c.field-meta.xml
<CustomField>
    <fullName>ISM_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISM Books?</label>
    <type>Checkbox</type>
</CustomField>