force-app/main/default/objects/Marketing_Event__c/fields/Legacy_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Legacy_RecordType__c</fullName>
    <label>Legacy RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>