force-app/main/default/objects/Marketing_Event__c/fields/LoanPriority__c.field-meta.xml
<CustomField>
    <fullName>LoanPriority__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Solo Email&apos;, 1, 
			IF( RecordType.DeveloperName = &apos;Group Email&apos;, 2, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoanPriority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>