force-app/main/default/objects/Marketing_Event__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunch</label>
    <type>Checkbox</type>
</CustomField>