force-app/main/default/objects/Marketing_Event__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>CreatedBy.Manager.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>