force-app/main/default/objects/Marketing_Event__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>CreatedBy.Manager.Email</formula>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>