force-app/main/default/objects/Marketing_Event__c/fields/Manager_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Field__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Manager Email Field</label>
    <type>Email</type>
</CustomField>