force-app/main/default/objects/Marketing_Event__c/fields/Marketing_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Name__c</fullName>
    <label>Marketing Activity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>