force-app/main/default/objects/Marketing_Event__c/fields/Marketing_Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assistance_Needed__c</fullName>
    <inlineHelpText>Change this field as marketing needs change.</inlineHelpText>
    <label>Marketing Assistance Needed?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>