force-app/main/default/objects/Marketing_Event__c/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
            <value>
                <fullName>National Sponsorship</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>