force-app/main/default/objects/Marketing_Event__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.RecordTypeId</field>
            <operation>equals</operation>
            <value>MSA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>