force-app/main/default/objects/Marketing_Event__c/fields/of_people_registered__c.field-meta.xml
<CustomField>
    <fullName>of_people_registered__c</fullName>
    <label>How many reigistered?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>