force-app/main/default/objects/Marketing_Event__c/fields/of_Team_Members_Attending__c.field-meta.xml
<CustomField>
    <fullName>of_Team_Members_Attending__c</fullName>
    <label># of Team Members Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>