force-app/main/default/objects/Marketing_Event__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>500/Free Appraisal</fullName>
            </value>
            <value>
                <fullName>500/500</fullName>
            </value>
            <value>
                <fullName>500/750</fullName>
            </value>
            <value>
                <fullName>500/1000</fullName>
            </value>
            <value>
                <fullName>$1250 off</fullName>
                <isActive>false</isActive>
                <label>$1250 off</label>
            </value>
            <value>
                <fullName>$1500</fullName>
                <isActive>false</isActive>
                <label>$1500</label>
            </value>
            <value>
                <fullName>750</fullName>
                <isActive>false</isActive>
                <label>750</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>