force-app/main/default/objects/Marketing_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Marketing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>