force-app/main/default/objects/Marketing_Event__c/fields/Opportunity_Channel__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Channel__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <label>Opportunity Channel</label>
    <type>Text</type>
</CustomField>