force-app/main/default/objects/Marketing_Event__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Marketing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>