force-app/main/default/objects/Marketing_Event__c/fields/Partner_Gift__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Gift?</label>
    <type>Checkbox</type>
</CustomField>