force-app/main/default/objects/Marketing_Event__c/fields/Placement_Location__c.field-meta.xml
<CustomField>
    <fullName>Placement_Location__c</fullName>
    <label>Placement Location</label>
    <type>TextArea</type>
</CustomField>