force-app/main/default/objects/Marketing_Event__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <description>6 digit short # required</description>
    <inlineHelpText>6 digit short # required</inlineHelpText>
    <label>PO #</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>