force-app/main/default/objects/Marketing_Event__c/fields/Program_Audience__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience__c</fullName>
    <label>Program/Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Counselor Presentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>