force-app/main/default/objects/Marketing_Event__c/fields/Raffle_Item_Needed__c.field-meta.xml
<CustomField>
    <fullName>Raffle_Item_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raffle Item Needed?</label>
    <type>Checkbox</type>
</CustomField>