force-app/main/default/objects/Marketing_Event__c/fields/Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Text__c</fullName>
    <description>use when needing record type name and not ID</description>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Text</label>
    <type>Text</type>
</CustomField>