force-app/main/default/objects/Marketing_Event__c/fields/Registration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Registration_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Completed?</label>
    <type>Checkbox</type>
</CustomField>