force-app/main/default/objects/Marketing_Event__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>